RESOLVED FIXED224985
REGRESSION (r273154): fast/forms/ios/repeatedly-focus-offscreen-select.html is consistently failing
https://bugs.webkit.org/show_bug.cgi?id=224985
Summary REGRESSION (r273154): fast/forms/ios/repeatedly-focus-offscreen-select.html i...
Aditya Keerthi
Reported 2021-04-23 10:36:01 PDT
...
Attachments
Patch (2.00 KB, patch)
2021-04-23 10:44 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-04-23 10:36:18 PDT
Aditya Keerthi
Comment 2 2021-04-23 10:44:32 PDT
EWS
Comment 3 2021-04-23 15:05:04 PDT
Committed r276522 (236976@main): <https://commits.webkit.org/236976@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426925 [details].
Note You need to log in before you can comment on or make changes to this bug.